--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,39 @@
-.App {
+.header {
+  background-color: lightseagreen;
+  display: flex;
+  justify-content: space-around;
+}
+.header img {
+  max-height: 100px;
+  max-width: 100px;
+}
+.toDoList h1 {
   text-align: center;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.listBox {
+  background-color: lightgray;
+  max-width: 500px;
+  margin: 0 auto;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.listBox .listItems {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.listItems {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 30px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.listItems li {
+  padding-left: 10px;
+}
+footer {
+  background-color: gray;
+  display: flex;
+  justify-content: space-around;
+}
+footer img {
+  max-height: 100px;
+  max-width: 100px; 
 }
