--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,23 @@
   max-height: 50px;
   max-width: 50px;
 }
+.addInput {
+  display: flex;
+  justify-content: center;
+  margin-top: 15px;
+}
+.addInput input {
+  padding: 15px;
+  background-color: gray;
+  font-size: 1.125rem;
+  color: white;
+  font-style: bold;
+}
+.addInput button {
+  padding: 15px;
+  background-color: lightgreen;
+  font-size: 1.125rem;
+}
 .toDoList h1 {
   text-align: center;
 }
@@ -32,7 +49,7 @@
   border-bottom:  double;
   font-size: 1.125rem;
 }
-.listItems li p {
+.listItems li p{
   margin-left: 10px;
 }
 input[type=checkbox] { 
